[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2018"
authors = ["Madelyn Seal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto=true

[dependencies]
actix-web="4"
actix-files="0.6"
env_logger="0.11"
log="0.4"
clap={version="4", features=["cargo"]}
